--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,10 +13,19 @@
 		<param-name>javax.faces.PROJECT_STAGE</param-name>
 		<param-value>Development</param-value>
 	</context-param>
-
+	<!-- login filter -->
+	<filter>
+		<filter-name>login</filter-name>
+		<filter-class>com.turksat.networkcheck.Security.LoginFilter</filter-class>
+	</filter>
+	<!-- set the login filter to secure all the pages in the /secured/* path of the application -->
+	<filter-mapping>
+		<filter-name>login</filter-name>
+		<url-pattern>/secured/*</url-pattern>
+	</filter-mapping>
 	<!-- Welcome page -->
 	<welcome-file-list>
-		<welcome-file>anasayfa.xhtml</welcome-file>
+		<welcome-file>giris.xhtml</welcome-file>
 	</welcome-file-list>
 
 	<!-- JSF mapping -->
